Removed possibility of WebClient to login

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -278,23 +278,27 @@ ConnectionsManager.Connection.invalidURI = Connection to {0} failed.\n\n{0} is n
 ConnectionsManager.Connection.alreadyCreating = A connection to {0} is already being established. Please wait a few seconds.
 ConnectionsManager.Connection.connectionFailed = Connection to {0} failed.\n\nCheck the following:\n- Valid credentials.\n- Access permission.\n- Correct URL.
 ConnectionsManager.Connection.connectedTo = Connected to {0}.
-ConnectionsManager.Connection.logout = Log out
-ConnectionsManager.Connection.logoutConfirmation = Log out? This will also close the connection to the server.
 ConnectionsManager.Connection.removeClient = Remove
 ConnectionsManager.Connection.closeImages = You need to close images from this server in the viewer first!
-ConnectionsManager.Connection.loginToServer = Log in to server
-ConnectionsManager.Connection.loginFailed = Could not log in to server. Check the log for more info.
 ConnectionsManager.Connection.removeClientConfirmation = This server will be removed from the list of active servers.
 ConnectionsManager.Connection.disconnectClient = Disconnect from server
 ConnectionsManager.Connection.disconnectClientConfirmation = The connection to the server will be closed.
 ConnectionsManager.Connection.image = image
 ConnectionsManager.Connection.images = images
 ConnectionsManager.Connection.browse = Browse
+ConnectionsManager.Connection.browseDescription = Browse the files of this server
 ConnectionsManager.Connection.login = Log in
+ConnectionsManager.Connection.loginDescription = Attempt to authenticate to this server
 ConnectionsManager.Connection.connect = Connect
+ConnectionsManager.Connection.connectDescription = Attempt to connect to this server
 ConnectionsManager.Connection.disconnect = Disconnect
+ConnectionsManager.Connection.disconnectDescription = Disconnect from this server
+ConnectionsManager.Connection.removeDescription = Close the connection to this server and remove it from this list
 ConnectionsManager.Connection.noImage = 0 image
 ConnectionsManager.Connection.loginSuccessful = Login successful: {0} ("{1}")
+
+ConnectionsManager.NewConnectionOptions.title = New connection
+ConnectionsManager.NewConnectionOptions.skipAuthentication = Enable logging in as a public user
 
 ConnectionsManager.ConnectionManager.noClients = No clients
 ConnectionsManager.ConnectionManager.webClients = Web clients
