Prompt user to skip authentication when opening browser

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -105,6 +105,9 @@ Browser.BrowserCommand.alreadyCreating = A connection to {0} is already being es
 Browser.BrowserCommand.connectionFailed = Connection to {0} failed.\n\nCheck the following:\n- Valid credentials.\n- Access permission.\n- Correct URL.
 Browser.BrowserCommand.webServer = Web server
 
+Browser.NewConnectionOptions.title = New connection
+Browser.NewConnectionOptions.skipAuthentication = Enable logging in as a public user
+
 Browser.ServerBrowser.omeroWebServer = OMERO web server
 Browser.ServerBrowser.server = Server:
 Browser.ServerBrowser.username = Username:
