Added logout button

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -292,6 +292,8 @@ ConnectionsManager.Connection.browse = Browse
 ConnectionsManager.Connection.browseDescription = Browse the files of this server
 ConnectionsManager.Connection.login = Log in
 ConnectionsManager.Connection.loginDescription = Attempt to authenticate to this server
+ConnectionsManager.Connection.logout = Log out
+ConnectionsManager.Connection.logoutDescription = Log out and attempt to create an unauthenticated connection to this server
 ConnectionsManager.Connection.connect = Connect
 ConnectionsManager.Connection.connectDescription = Attempt to connect to this server
 ConnectionsManager.Connection.disconnect = Disconnect
@@ -299,6 +301,8 @@ ConnectionsManager.Connection.disconnectDescription = Disconnect from this serve
 ConnectionsManager.Connection.removeDescription = Close the connection to this server and remove it from this list
 ConnectionsManager.Connection.noImage = 0 image
 ConnectionsManager.Connection.loginSuccessful = Login successful: {0} ("{1}")
+ConnectionsManager.Connection.logoutSuccessful = Log out successful
+ConnectionsManager.Connection.logoutSuccessfulButNoUnauthenticated = Log out successful, but creating an unauthenticated connection to this server failed
 
 ConnectionsManager.NewConnectionOptions.title = New connection
 ConnectionsManager.NewConnectionOptions.skipAuthentication = Enable logging in as a public user
