Added login logout buttons to browser

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -111,6 +111,14 @@ Browser.NewConnectionOptions.skipAuthentication = Enable logging in as a public 
 Browser.ServerBrowser.omeroWebServer = OMERO web server
 Browser.ServerBrowser.server = Server:
 Browser.ServerBrowser.username = Username:
+Browser.ServerBrowser.unauthenticated = Unauthenticated
+Browser.ServerBrowser.login = Login
+Browser.ServerBrowser.loginDescription = Attempt to authenticate to this server
+Browser.ServerBrowser.loginSuccessful = Login successful: {0} ("{1}")
+Browser.ServerBrowser.loginFailed = Login failed.
+Browser.ServerBrowser.logout = Logout
+Browser.ServerBrowser.logoutDescription = Log out and attempt to create an unauthenticated connection to this server
+Browser.ServerBrowser.logoutSuccessful = Log out successful
 Browser.ServerBrowser.openedImages = Opened images:
 Browser.ServerBrowser.pixelAPI = Pixel API:
 Browser.ServerBrowser.accessRawPixels = Access to raw pixel data
@@ -121,7 +129,6 @@ Browser.ServerBrowser.entitiesLoadedBackground = Entities are loaded in the back
 Browser.ServerBrowser.orphanedImagesLoadedBackground = Orphaned images are loaded in the background...
 Browser.ServerBrowser.loadingThumbnails = Loading thumbnails...
 Browser.ServerBrowser.thumbnailsLoadedBackground = Thumbnails are loaded in the background...
-Browser.ServerBrowser.filterByGroupAndOwner = Filter by group and owner
 Browser.ServerBrowser.moreInfo = More info...
 Browser.ServerBrowser.openInBrowser = Open in browser
 Browser.ServerBrowser.copyToClipboard = Copy to clipboard
