Added omero server address in settings window

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -154,6 +154,8 @@ Browser.ServerBrowser.Settings.mxPixelBufferAPIPort = Pixel Buffer microservice 
 Browser.ServerBrowser.Settings.mxPixelBufferAPIPortDescription = The OMERO server port used by the pixel buffer microservice (default: 8082).
 Browser.ServerBrowser.Settings.webJpegQuality = Web pixel API JPEG quality
 Browser.ServerBrowser.Settings.webJpegQualityDescription = The JPEG quality used by the Web pixel API (from 0 to 1, default: 0.9).
+Browser.ServerBrowser.Settings.omeroServerAddress = OMERO (ICE) server address
+Browser.ServerBrowser.Settings.omeroServerAddressDescription = The address of the omero.server (ICE) instance (which can be different from the omero.web instance). This parameter should only be specified if importing an image with the Ice API doesn't work.
 Browser.ServerBrowser.Settings.ok = OK
 Browser.ServerBrowser.Settings.cancel = Cancel
 Browser.ServerBrowser.Settings.apply = Apply
