Added port preference for OMERO server instance

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -150,12 +150,17 @@ Browser.ServerBrowser.cantDisplayInformation = Can't display object information
 Browser.ServerBrowser.errorWhenFetchingInformation = Error when fetching information of {0}
 
 Browser.ServerBrowser.Settings.title = Settings
-Browser.ServerBrowser.Settings.mxPixelBufferAPIPort = Pixel Buffer microservice API port
-Browser.ServerBrowser.Settings.mxPixelBufferAPIPortDescription = The OMERO server port used by the pixel buffer microservice (default: 8082).
-Browser.ServerBrowser.Settings.webJpegQuality = Web pixel API JPEG quality
-Browser.ServerBrowser.Settings.webJpegQualityDescription = The JPEG quality used by the Web pixel API (from 0 to 1, default: 0.9).
-Browser.ServerBrowser.Settings.omeroServerAddress = OMERO (ICE) server address
-Browser.ServerBrowser.Settings.omeroServerAddressDescription = The address of the omero.server (ICE) instance (which can be different from the omero.web instance). This parameter should only be specified if importing an image with the Ice API doesn't work.
+Browser.ServerBrowser.Settings.webAPI = Web API
+Browser.ServerBrowser.Settings.webAPIJpegQuality = JPEG quality
+Browser.ServerBrowser.Settings.webAPIJpegQualityDescription = The JPEG quality used by the Web pixel API (from 0 to 1, default: 0.9).
+Browser.ServerBrowser.Settings.iceAPI = Ice API
+Browser.ServerBrowser.Settings.iceAPIServerAddress = Server address
+Browser.ServerBrowser.Settings.iceAPIServerAddressDescription = The address of the omero.server (ICE) instance (which can be different from the omero.web instance). This parameter should only be specified if importing an image with the Ice API doesn't work.
+Browser.ServerBrowser.Settings.iceAPIServerPort = Server port
+Browser.ServerBrowser.Settings.iceAPIServerPortDescription = The port of the omero.server (ICE) instance (which can be different from the omero.web instance). This parameter should only be specified if importing an image with the Ice API doesn't work.
+Browser.ServerBrowser.Settings.msPixelBufferAPI = Pixel Buffer microservice API
+Browser.ServerBrowser.Settings.msPixelBufferAPIPort = Server port
+Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription = The OMERO server port used by the pixel buffer microservice (default: 8082).
 Browser.ServerBrowser.Settings.ok = OK
 Browser.ServerBrowser.Settings.cancel = Cancel
 Browser.ServerBrowser.Settings.apply = Apply
