Remember enable unauthenticated user in core + gui

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -105,9 +105,6 @@ Browser.BrowserCommand.alreadyCreating = A connection to {0} is already being es
 Browser.BrowserCommand.connectionFailed = Connection to {0} failed.\n\nCheck the following:\n- Valid credentials.\n- Access permission.\n- Correct URL.
 Browser.BrowserCommand.webServer = Web server
 
-Browser.NewConnectionOptions.title = New connection
-Browser.NewConnectionOptions.skipAuthentication = Enable logging in as a public user
-
 Browser.ServerBrowser.omeroWebServer = OMERO web server
 Browser.ServerBrowser.server = Server:
 Browser.ServerBrowser.username = Username:
@@ -313,13 +310,11 @@ ConnectionsManager.Connection.connectDescription = Attempt to connect to this se
 ConnectionsManager.Connection.disconnect = Disconnect
 ConnectionsManager.Connection.disconnectDescription = Disconnect from this server
 ConnectionsManager.Connection.removeDescription = Close the connection to this server and remove it from this list
+ConnectionsManager.Connection.skipAuthentication = Enable logging in as a public user
 ConnectionsManager.Connection.noImage = 0 image
 ConnectionsManager.Connection.loginSuccessful = Login successful: {0} ("{1}")
 ConnectionsManager.Connection.logoutSuccessful = Log out successful
 ConnectionsManager.Connection.logoutSuccessfulButNoUnauthenticated = Log out successful, but creating an unauthenticated connection to this server failed
-
-ConnectionsManager.NewConnectionOptions.title = New connection
-ConnectionsManager.NewConnectionOptions.skipAuthentication = Enable logging in as a public user
 
 ConnectionsManager.ConnectionManager.noClients = No clients
 ConnectionsManager.ConnectionManager.webClients = Web clients
