--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     shadow "io.github.qupath:qupath-gui-fx:${qupathVersion}"
     shadow "io.github.qupath:qupath-extension-bioformats:${qupathVersion}"
     shadow libs.qupath.fxtras
+    shadow libs.guava
 
     shadow libs.slf4j
 
