--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     // Main gradle plugin for building a Java library
     id 'java-library'
     // To create a shadow/fat jar that bundle up all dependencies
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
     // Add JavaFX dependencies
     alias(libs.plugins.javafx)
     // Version in settings.gradle
@@ -13,7 +13,7 @@ ext.moduleName = 'qupath.extension.omero'
 version = "0.1.1-rc1"
 description = "QuPath extension to support image reading using OMERO APIs."
 ext.qupathVersion = gradle.ext.qupathVersion
-ext.qupathJavaVersion = 21
+ext.qupathJavaVersion = libs.versions.jdk.get()
 
 dependencies {
     shadow "io.github.qupath:qupath-gui-fx:${qupathVersion}"
@@ -39,6 +39,19 @@ jar {
         attributes("Implementation-Title": project.name,
                 "Implementation-Version": archiveVersion,
                 "Automatic-Module-Name": moduleName)
+    }
+}
+
+/**
+ * Copy necessary attributes, see
+ * - https://github.com/qupath/qupath-extension-template/issues/9
+ * - https://github.com/openjfx/javafx-gradle-plugin#variants
+ */
+configurations.shadow  {
+    def runtimeAttributes = configurations.runtimeClasspath.attributes
+    runtimeAttributes.keySet().each { key ->
+        if (key in [Usage.USAGE_ATTRIBUTE, OperatingSystemFamily.OPERATING_SYSTEM_ATTRIBUTE, MachineArchitecture.ARCHITECTURE_ATTRIBUTE])
+            attributes.attribute(key, runtimeAttributes.getAttribute(key))
     }
 }
 
