--- a/.github/workflows/maven_release.yml
+++ b/.github/workflows/maven_release.yml
@@ -7,5 +7,6 @@ jobs:
   build:
     name: Publish release
     uses: ./.github/workflows/maven.yml
+    secrets: inherit
     with:
       release: true
