--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ plugins {
 ext.moduleName = 'qupath.extension.omero'
 version = "0.1.1-rc1"
 description = "QuPath extension to support image reading using OMERO APIs."
+group = 'io.github.qupath'
 ext.qupathVersion = gradle.ext.qupathVersion
 ext.qupathJavaVersion = libs.versions.jdk.get()
 
