--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     // Main gradle plugin for building a Java library
     id 'java-library'
+    id 'maven-publish'
     // To create a shadow/fat jar that bundle up all dependencies
     id 'com.github.johnrengelman.shadow' version '8.1.1'
     // Add JavaFX dependencies
@@ -12,6 +13,7 @@ plugins {
 ext.moduleName = 'qupath.extension.omero'
 version = "0.1.1-rc1"
 description = "QuPath extension to support image reading using OMERO APIs."
+group = 'io.github.qupath'
 ext.qupathVersion = gradle.ext.qupathVersion
 ext.qupathJavaVersion = libs.versions.jdk.get()
 
@@ -116,5 +118,36 @@ repositories {
     maven {
         name "unidata.releases<"
         url "https://artifacts.unidata.ucar.edu/content/repositories/unidata-releases"
+    }
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "SciJava"
+            def releasesRepoUrl = uri("https://maven.scijava.org/content/repositories/releases")
+            def snapshotsRepoUrl = uri("https://maven.scijava.org/content/repositories/snapshots")
+            // Use gradle -Prelease publish
+            url = project.hasProperty('release') ? releasesRepoUrl : snapshotsRepoUrl
+            credentials {
+                username = System.getenv("MAVEN_USER")
+                password = System.getenv("MAVEN_PASS")
+            }
+        }
+    }
+
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+
+            pom {
+                licenses {
+                    license {
+                        name = 'Apache License v2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0'
+                    }
+                }
+            }
+        }
     }
 }
