Renamed key-value pair annotation

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -215,7 +215,7 @@ Utilities.createProjectFirst = If you want to handle multiple images, you need t
 
 Web.Entities.Annotation.Comment.title = Comments
 Web.Entities.Annotation.File.title = Attachments
-Web.Entities.Annotation.Map.title = Additional information
+Web.Entities.Annotation.Map.title = Key-Value pairs
 Web.Entities.Annotation.Rating.title = Ratings
 Web.Entities.Annotation.Tag.title = Tags
 
