Started attachment refactoring

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -18,12 +18,10 @@ DataTransporters.Forms.KeyValues.keepExisting = Keep existing values
 DataTransporters.Forms.KeyValues.replaceExisting = Replace existing values
 DataTransporters.Forms.KeyValues.deleteAll = Delete all existing values
 
-DataTransporters.Forms.SendAnnotations.selectAnnotationsOptions = Select annotations export options:
 DataTransporters.Forms.SendAnnotations.deleteExistingAnnotations = Delete existing annotations
 DataTransporters.Forms.SendAnnotations.send = Send:
 DataTransporters.Forms.SendAnnotations.onlySelectedAnnotations = Only selected annotations
 DataTransporters.Forms.SendAnnotations.allAnnotations = All annotations
-DataTransporters.Forms.SendAnnotations.selectMeasurementsOptions = Select measurements export options:
 DataTransporters.Forms.SendAnnotations.deleteExistingMeasurements = Delete existing measurements
 DataTransporters.Forms.SendAnnotations.annotationMeasurements = Annotation measurements
 DataTransporters.Forms.SendAnnotations.detectionMeasurements = Detection measurements
@@ -66,7 +64,7 @@ DataTransporters.AnnotationsSender.operationFailed = Operation failed: {0}.
 DataTransporters.AnnotationsSender.deleteExistingMeasurements = Delete existing measurements
 DataTransporters.AnnotationsSender.sendAnnotationMeasurements = Send annotation measurements
 DataTransporters.AnnotationsSender.sendDetectionMeasurements = Send detection measurements
-DataTransporters.AnnotationsSender.notAllOperationsSucceeded = Impossible to perform some operations. Do you have sufficient rights to write values to the OMERO image? If measurements are sent, is there a project open?
+DataTransporters.AnnotationsSender.notAllOperationsSucceeded = Impossible to perform some operations. Do you have sufficient rights to write values to the OMERO image?
 DataTransporters.AnnotationsSender.notFromOMERO = The current image is not from OMERO!
 
 DataTransporters.ImageSettingsSender.sendImageSettings = Send image settings
