Started requests refactoring

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -141,7 +141,7 @@ Browser.ServerBrowser.loadingOrphanedImages = Loading orphaned images
 Browser.ServerBrowser.noElementSelected = No element selected
 Browser.ServerBrowser.multipleElementsSelected = Multiple elements selected
 Browser.ServerBrowser.cantDisplayInformation = Can't display object information
-Browser.ServerBrowser.errorWhenFetchingInformation = Error when fetching information of {0}
+Browser.ServerBrowser.errorWhenFetchingInformation = Error when fetching information of {0}: {1}
 
 Browser.ServerBrowser.Settings.title = Settings
 Browser.ServerBrowser.Settings.webAPI = Web API
