Requests refactoring continued

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -171,6 +171,7 @@ Browser.ServerBrowser.AdvancedInformation.addedOwnedType = Added by: {0}\nOwned 
 Browser.ServerBrowser.AdvancedInformation.bytes = bytes
 
 Browser.ServerBrowser.AdvancedSearch.search = Search
+Browser.ServerBrowser.AdvancedSearch.errorOccurred = An error occurred: {0}
 Browser.ServerBrowser.AdvancedSearch.import = Import
 Browser.ServerBrowser.AdvancedSearch.importObjects = Import OMERO objects
 Browser.ServerBrowser.AdvancedSearch.query = Query
