--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -100,6 +100,9 @@ Browser.BrowserCommand.invalidURI = Connection to {0} failed.\n\n{0} is not a va
 Browser.BrowserCommand.alreadyCreating = A connection to {0} is already being established. Please wait a few seconds.
 Browser.BrowserCommand.connectionFailed = Connection to {0} failed.\n\nCheck the following:\n- Valid credentials.\n- Access permission.\n- Correct URL.
 Browser.BrowserCommand.webServer = Web server
+Browser.BrowserCommand.gatheringInformation = Gathering information on {0}...
+Browser.BrowserCommand.omeroError = OMERO error
+Browser.BrowserCommand.cannotGetServerInformation = Cannot get server information on {0}
 
 Browser.ServerBrowser.omeroWebServer = OMERO web server
 Browser.ServerBrowser.server = Server:
@@ -113,6 +116,7 @@ Browser.ServerBrowser.logoutDescription = Log out and attempt to create an unaut
 Browser.ServerBrowser.logoutSuccessful = Log out successful
 Browser.ServerBrowser.openedImages = Opened images:
 Browser.ServerBrowser.pixelAPI = Pixel API:
+Browser.ServerBrowser.publicUser = Public user
 Browser.ServerBrowser.accessRawPixels = Access to raw pixel data
 Browser.ServerBrowser.noAccessRawPixels = No access to raw pixel data
 Browser.ServerBrowser.settings = Settings
@@ -316,3 +320,14 @@ ConnectionsManager.ConnectionManager.noClients = No clients
 ConnectionsManager.ConnectionManager.webClients = Web clients
 
 ConnectionsManager.Image.unreachableImage = Unreachable image (access not permitted)
+
+Login.LoginForm.connecting = Connecting...
+Login.LoginForm.connectionFailed = Connection to {0} failed.\n\nCheck the following:\n- Valid credentials.\n- Access permission.\n- Correct URL.
+Login.LoginForm.createConnection = Create a connection with an OMERO server
+Login.LoginForm.webServerUrl = OMERO web server URL
+Login.LoginForm.logInPublicUser = Log in as a public user
+Login.LoginForm.username = Username
+Login.LoginForm.password = Password
+Login.LoginForm.connect = Connect
+
+Login.WaitingWindow.cancel = Cancel
