--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -87,19 +87,7 @@ DataTransporters.KeyValuesSender.keyValuesNotSent = Key value pairs not sent to 
 
 Browser.BrowseMenu.browseServer = Browse server...
 Browser.BrowseMenu.newServer = New server...
-Browser.BrowseMenu.enterURL = Enter URL
-Browser.BrowseMenu.webServer = Web server
-Browser.BrowseMenu.invalidURI = Connection to {0} failed.\n\n{0} is not a valid URL.
-Browser.BrowseMenu.alreadyCreating = A connection to {0} is already being established. Please wait a few seconds.
-Browser.BrowseMenu.connectionFailed = Connection to {0} failed.\n\nCheck the following:\n- Valid credentials.\n- Access permission.\n- Correct URL.
 
-Browser.NewServer.enterOmeroUrlToBrowse = Enter an OMERO server URL to browse (e.g. https://idr.openmicroscopy.org/):
-Browser.NewServer.enterOmeroUrl = Enter OMERO URL
-
-Browser.BrowserCommand.invalidURI = Connection to {0} failed.\n\n{0} is not a valid URL.
-Browser.BrowserCommand.alreadyCreating = A connection to {0} is already being established. Please wait a few seconds.
-Browser.BrowserCommand.connectionFailed = Connection to {0} failed.\n\nCheck the following:\n- Valid credentials.\n- Access permission.\n- Correct URL.
-Browser.BrowserCommand.webServer = Web server
 Browser.BrowserCommand.gatheringInformation = Gathering information on {0}...
 Browser.BrowserCommand.omeroError = OMERO error
 Browser.BrowserCommand.cannotGetServerInformation = Cannot get server information on {0}
@@ -108,12 +96,10 @@ Browser.ServerBrowser.omeroWebServer = OMERO web server
 Browser.ServerBrowser.server = Server:
 Browser.ServerBrowser.username = Username:
 Browser.ServerBrowser.login = Login
+Browser.ServerBrowser.closeImages = You need to close images from this server in the viewer first!
 Browser.ServerBrowser.loginDescription = Attempt to authenticate to this server
-Browser.ServerBrowser.loginSuccessful = Login successful: {0} ("{1}")
-Browser.ServerBrowser.loginFailed = Login failed.
 Browser.ServerBrowser.logout = Logout
 Browser.ServerBrowser.logoutDescription = Log out and attempt to create an unauthenticated connection to this server
-Browser.ServerBrowser.logoutSuccessful = Log out successful
 Browser.ServerBrowser.openedImages = Opened images:
 Browser.ServerBrowser.pixelAPI = Pixel API:
 Browser.ServerBrowser.publicUser = Public user
@@ -204,11 +190,6 @@ Browser.ServerBrowser.Hierarchy.numberOfChannels = ✗ Number of channels unsupp
 Browser.ServerBrowser.Hierarchy.pixelType = ✗ Pixel type unsupported
 Browser.ServerBrowser.Hierarchy.pixelAPI = ✗ Pixel API unavailable
 
-Web.Apis.Authenticators.username = Username
-Web.Apis.Authenticators.password = Password
-Web.Apis.Authenticator.login = Login
-Web.Apis.Authenticator.enterLoginDetails = Please enter your login details
-
 Utilities.noImages = No images
 Utilities.noValidImagesInSelected = No valid images found in the selected items!
 Utilities.openImages = Open images
@@ -287,11 +268,9 @@ Web.Entities.Permissions.Owner.allMembers = All members
 
 ConnectionsManager.Command.manageServerConnections = Manage server connections
 
-ConnectionsManager.Connection.webServer = Web server
-ConnectionsManager.Connection.invalidURI = Connection to {0} failed.\n\n{0} is not a valid URL.
-ConnectionsManager.Connection.alreadyCreating = A connection to {0} is already being established. Please wait a few seconds.
-ConnectionsManager.Connection.connectionFailed = Connection to {0} failed.\n\nCheck the following:\n- Valid credentials.\n- Access permission.\n- Correct URL.
-ConnectionsManager.Connection.connectedTo = Connected to {0}.
+ConnectionsManager.Connection.omeroServer = OMERO server
+ConnectionsManager.Connection.connectedTo = Connected to {0} with {1}.
+ConnectionsManager.Connection.publicUser = public user
 ConnectionsManager.Connection.removeClient = Remove
 ConnectionsManager.Connection.closeImages = You need to close images from this server in the viewer first!
 ConnectionsManager.Connection.removeClientConfirmation = This server will be removed from the list of active servers.
@@ -303,18 +282,12 @@ ConnectionsManager.Connection.browse = Browse
 ConnectionsManager.Connection.browseDescription = Browse the files of this server
 ConnectionsManager.Connection.login = Log in
 ConnectionsManager.Connection.loginDescription = Attempt to authenticate to this server
-ConnectionsManager.Connection.logout = Log out
-ConnectionsManager.Connection.logoutDescription = Log out and attempt to create an unauthenticated connection to this server
 ConnectionsManager.Connection.connect = Connect
 ConnectionsManager.Connection.connectDescription = Attempt to connect to this server
 ConnectionsManager.Connection.disconnect = Disconnect
 ConnectionsManager.Connection.disconnectDescription = Disconnect from this server
 ConnectionsManager.Connection.removeDescription = Close the connection to this server and remove it from this list
-ConnectionsManager.Connection.skipAuthentication = Enable logging in as a public user
 ConnectionsManager.Connection.noImage = 0 image
-ConnectionsManager.Connection.loginSuccessful = Login successful: {0} ("{1}")
-ConnectionsManager.Connection.logoutSuccessful = Log out successful
-ConnectionsManager.Connection.logoutSuccessfulButNoUnauthenticated = Log out successful, but creating an unauthenticated connection to this server failed
 
 ConnectionsManager.ConnectionManager.noClients = No clients
 ConnectionsManager.ConnectionManager.webClients = Web clients
