Separate ROI deletion and addition into two requests

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -61,6 +61,7 @@ DataTransporters.AnnotationsSender.dataToSend = Data to send
 DataTransporters.AnnotationsSender.noAnnotations = No annotation to send!
 DataTransporters.AnnotationsSender.operationSucceeded = Operation succeeded: {0}.
 DataTransporters.AnnotationsSender.operationFailed = Operation failed: {0}.
+DataTransporters.AnnotationsSender.deleteExistingAnnotations = Delete existing annotations
 DataTransporters.AnnotationsSender.deleteExistingMeasurements = Delete existing measurements
 DataTransporters.AnnotationsSender.sendAnnotationMeasurements = Send annotation measurements
 DataTransporters.AnnotationsSender.sendDetectionMeasurements = Send detection measurements
