Allow importing / sending annotations from particular user

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -9,26 +9,30 @@ DataTransporters.Forms.ImageSettings.channelNames = Channel names
 DataTransporters.Forms.ImageSettings.channelColors = Channel colors
 DataTransporters.Forms.ImageSettings.channelDisplayRanges = Channel display ranges
 
-DataTransporters.Forms.ImportAnnotations.selectImportOptions = Select import options:
-DataTransporters.Forms.ImportAnnotations.deleteCurrentAnnotations = Delete current annotations
-DataTransporters.Forms.ImportAnnotations.deleteCurrentDetections = Delete current detections
+DataTransporters.Forms.ImportAnnotations.importAnnotationsFrom = Import annotations from
+DataTransporters.Forms.ImportAnnotations.deleteCurrentAnnotations = Delete current QuPath annotations
+DataTransporters.Forms.ImportAnnotations.deleteCurrentDetections = Delete current QuPath detections
 
 DataTransporters.Forms.KeyValues.selectUpdateOptions = Select update options:
 DataTransporters.Forms.KeyValues.keepExisting = Keep existing values
 DataTransporters.Forms.KeyValues.replaceExisting = Replace existing values
 DataTransporters.Forms.KeyValues.deleteAll = Delete all existing values
 
-DataTransporters.Forms.SendAnnotations.deleteExistingAnnotations = Delete existing annotations
+DataTransporters.Forms.SendAnnotations.deleteExistingAnnotations = Delete existing OMERO annotations from
 DataTransporters.Forms.SendAnnotations.send = Send:
 DataTransporters.Forms.SendAnnotations.onlySelectedAnnotations = Only selected annotations
 DataTransporters.Forms.SendAnnotations.allAnnotations = All annotations
-DataTransporters.Forms.SendAnnotations.deleteExistingMeasurements = Delete existing measurements
+DataTransporters.Forms.SendAnnotations.deleteExistingMeasurements = Delete existing OMERO measurements
 DataTransporters.Forms.SendAnnotations.annotationMeasurements = Annotation measurements
 DataTransporters.Forms.SendAnnotations.detectionMeasurements = Detection measurements
 
 DataTransporters.AnnotationsImporter.importAnnotations = Import annotations
 DataTransporters.AnnotationsImporter.notFromOMERO = The current image is not from OMERO!
+DataTransporters.AnnotationsImporter.retrievingServer = Retrieving server information...
+DataTransporters.AnnotationsImporter.serverError = Server error
+DataTransporters.AnnotationsImporter.cannotGetServerInformation = Cannot get server information of {0}
 DataTransporters.AnnotationsImporter.dataToSend = Data to send
+DataTransporters.AnnotationsImporter.importingAnnotations = Importing annotations...
 DataTransporters.AnnotationsImporter.noAnnotations = No annotations
 DataTransporters.AnnotationsImporter.noAnnotationsFound = No annotations were found, or an error occurred while retrieving them.
 DataTransporters.AnnotationsImporter.currentAnnotationsDeleted = Current annotations have been deleted.
@@ -40,6 +44,7 @@ DataTransporters.AnnotationsImporter.XAnnotationImported = {0} annotations have 
 DataTransporters.ImageSettingsImporter.importImageSettings = Import image settings
 DataTransporters.ImageSettingsImporter.notFromOMERO = The current image is not from OMERO!
 DataTransporters.ImageSettingsImporter.dataToSend = Data to send
+DataTransporters.ImageSettingsImporter.importingAnnotations = Importing image settings...
 DataTransporters.ImageSettingsImporter.couldNotGetImage = Could not retrieve image parameters.
 DataTransporters.ImageSettingsImporter.imageNameUpdated = Image name updated.
 DataTransporters.ImageSettingsImporter.imageNameNotUpdated = Image name not updated: the image must be part of a project.
@@ -51,6 +56,7 @@ DataTransporters.ImageSettingsImporter.channelDisplayRangesUpdated = Channel dis
 DataTransporters.ImageSettingsImporter.channelDisplayRangesNotUpdated = Channel display ranges not updated. The number of channels returned by the OMERO server doesn't match the number of channels of the image.
 
 DataTransporters.KeyValuesImporter.importKeyValues = Import key value pairs
+DataTransporters.KeyValuesImporter.importingKeyValues = Importing key value pairs...
 DataTransporters.KeyValuesImporter.projectNotOpened = A project must be opened in QuPath.
 DataTransporters.KeyValuesImporter.notFromOMERO = The current image is not from OMERO!
 DataTransporters.KeyValuesImporter.couldNotRetrieveAnnotations = Could not retrieve annotations from OMERO.
@@ -58,6 +64,10 @@ DataTransporters.KeyValuesImporter.keyValuesImported = Key value pairs imported 
 
 DataTransporters.AnnotationsSender.sendAnnotations = Send annotations
 DataTransporters.AnnotationsSender.dataToSend = Data to send
+DataTransporters.AnnotationsSender.retrievingServer = Retrieving server information...
+DataTransporters.AnnotationsSender.serverError = Server error
+DataTransporters.AnnotationsSender.cannotGetServerInformation = Cannot get server information of {0}
+DataTransporters.AnnotationsSender.sendingAnnotations = Sending annotations...
 DataTransporters.AnnotationsSender.noAnnotations = No annotation to send!
 DataTransporters.AnnotationsSender.operationSucceeded = Operation succeeded: {0}.
 DataTransporters.AnnotationsSender.operationFailed = Operation failed: {0}.
@@ -71,6 +81,7 @@ DataTransporters.AnnotationsSender.notFromOMERO = The current image is not from 
 DataTransporters.ImageSettingsSender.sendImageSettings = Send image settings
 DataTransporters.ImageSettingsSender.notFromOMERO = The current image is not from OMERO!
 DataTransporters.ImageSettingsSender.dataToSend = Data to send
+DataTransporters.ImageSettingsSender.sendingImageSettings = Sending image settings...
 DataTransporters.ImageSettingsSender.parameterSent = "{0}" parameter sent.
 DataTransporters.ImageSettingsSender.parameterNotSent = "{0}" parameter not sent.
 DataTransporters.ImageSettingsSender.notAllParametersSent = Impossible to send some parameters. Do you have sufficient rights to write values to the OMERO image?
@@ -80,6 +91,7 @@ DataTransporters.ImageSettingsSender.channelColors = Channel colors
 DataTransporters.ImageSettingsSender.channelDisplayRanges = Channel display ranges
 
 DataTransporters.KeyValuesSender.sendKeyValues = Send key value pairs
+DataTransporters.KeyValuesSender.sendingKeyValues = Sending key value pairs...
 DataTransporters.KeyValuesSender.projectNotOpened = A project must be opened in QuPath.
 DataTransporters.KeyValuesSender.notFromOMERO = The current image is not from OMERO!
 DataTransporters.KeyValuesSender.noValues = The current image does not contain any key value pairs.
@@ -91,7 +103,7 @@ Browser.BrowseMenu.newServer = New server...
 
 Browser.BrowserCommand.gatheringInformation = Gathering information on {0}...
 Browser.BrowserCommand.omeroError = OMERO error
-Browser.BrowserCommand.cannotGetServerInformation = Cannot get server information on {0}
+Browser.BrowserCommand.cannotGetServerInformation = Cannot get server information of {0}
 
 Browser.ServerBrowser.omeroWebServer = OMERO web server
 Browser.ServerBrowser.server = Server:
