--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -105,7 +105,7 @@ Browser.BrowserCommand.gatheringInformation = Gathering information on {0}...
 Browser.BrowserCommand.omeroError = OMERO error
 Browser.BrowserCommand.cannotGetServerInformation = Cannot get server information of {0}
 
-Browser.ServerBrowser.omeroWebServer = OMERO web server
+Browser.ServerBrowser.omeroBrowser = OMERO browser
 Browser.ServerBrowser.server = Server:
 Browser.ServerBrowser.username = Username:
 Browser.ServerBrowser.login = Login
