--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -55,12 +55,16 @@ DataTransporters.ImageSettingsImporter.channelColorsNotUpdated = Channel colors 
 DataTransporters.ImageSettingsImporter.channelDisplayRangesUpdated = Channel display ranges updated.
 DataTransporters.ImageSettingsImporter.channelDisplayRangesNotUpdated = Channel display ranges not updated. The number of channels returned by the OMERO server doesn't match the number of channels of the image.
 
-DataTransporters.KeyValuesImporter.importKeyValues = Import key value pairs
-DataTransporters.KeyValuesImporter.importingKeyValues = Importing key value pairs...
+DataTransporters.KeyValuesImporter.importKeyValues = Import key-value pairs
+DataTransporters.KeyValuesImporter.importingKeyValues = Importing key-value pairs...
 DataTransporters.KeyValuesImporter.projectNotOpened = A project must be opened in QuPath.
 DataTransporters.KeyValuesImporter.notFromOMERO = The current image is not from OMERO!
-DataTransporters.KeyValuesImporter.couldNotRetrieveAnnotations = Could not retrieve annotations from OMERO.
-DataTransporters.KeyValuesImporter.keyValuesImported = Key value pairs imported to the QuPath image.
+DataTransporters.KeyValuesImporter.couldNotRetrieveKeyValues = Could not retrieve key-value pairs from OMERO.
+DataTransporters.KeyValuesImporter.noKeyValuePairFound = No key-value pair found in the OMERO server
+DataTransporters.KeyValuesImporter.keyValuesImported = Key-value pairs imported to the QuPath image.
+DataTransporters.KeyValuesImporter.nokeyValuesAdded = No key-value pair was added to the current QuPath image.
+DataTransporters.KeyValuesImporter.followingKeyValuesAdded = The following key-value pairs were added to the current QuPath image:\n{0}.
+DataTransporters.KeyValuesImporter.followingKeyValuesNotAdded = The following key-value pairs were not added to the current QuPath image because of duplicates:\n{0}.
 
 DataTransporters.AnnotationsSender.sendAnnotations = Send annotations
 DataTransporters.AnnotationsSender.dataToSend = Data to send
@@ -90,13 +94,13 @@ DataTransporters.ImageSettingsSender.channelNames = Channel names
 DataTransporters.ImageSettingsSender.channelColors = Channel colors
 DataTransporters.ImageSettingsSender.channelDisplayRanges = Channel display ranges
 
-DataTransporters.KeyValuesSender.sendKeyValues = Send key value pairs
-DataTransporters.KeyValuesSender.sendingKeyValues = Sending key value pairs...
+DataTransporters.KeyValuesSender.sendKeyValues = Send key-value pairs
+DataTransporters.KeyValuesSender.sendingKeyValues = Sending key-value pairs...
 DataTransporters.KeyValuesSender.projectNotOpened = A project must be opened in QuPath.
 DataTransporters.KeyValuesSender.notFromOMERO = The current image is not from OMERO!
-DataTransporters.KeyValuesSender.noValues = The current image does not contain any key value pairs.
-DataTransporters.KeyValuesSender.keyValuesSent = Key value pairs sent to the server.
-DataTransporters.KeyValuesSender.keyValuesNotSent = Key value pairs not sent to the server.\nDo you have sufficient rights to write values to the OMERO image?
+DataTransporters.KeyValuesSender.noValues = The current image does not contain any key-value pairs.
+DataTransporters.KeyValuesSender.keyValuesSent = Key-value pairs sent to the server.
+DataTransporters.KeyValuesSender.keyValuesNotSent = Key-value pairs not sent to the server.\nDo you have sufficient rights to write values to the OMERO image?
 
 Browser.BrowseMenu.browseServer = Browse server...
 Browser.BrowseMenu.newServer = New server...
@@ -203,82 +207,6 @@ Browser.ServerBrowser.Hierarchy.numberOfChannels = ✗ Number of channels unsupp
 Browser.ServerBrowser.Hierarchy.pixelType = ✗ Pixel type unsupported
 Browser.ServerBrowser.Hierarchy.pixelAPI = ✗ Pixel API unavailable
 
-Utilities.noImages = No images
-Utilities.noValidImagesInSelected = No valid images found in the selected items!
-Utilities.openImages = Open images
-Utilities.createProjectFirst = If you want to handle multiple images, you need to create a project first.
-
-Web.Entities.Annotation.Comment.title = Comments
-Web.Entities.Annotation.File.title = Attachments
-Web.Entities.Annotation.Map.title = Key-Value pairs
-Web.Entities.Annotation.Rating.title = Ratings
-Web.Entities.Annotation.Tag.title = Tags
-
-Web.Entities.Image.name = Name
-Web.Entities.Image.id = Id
-Web.Entities.Image.owner = Owner
-Web.Entities.Image.group = Group
-Web.Entities.Image.acquisitionDate = Acquisition date
-Web.Entities.Image.imageWidth = Image width
-Web.Entities.Image.imageHeight = Image height
-Web.Entities.Image.uncompressedSize = Uncompressed size
-Web.Entities.Image.nbChannels = Nb of channels
-Web.Entities.Image.nbZSlices = Nb of z-slices
-Web.Entities.Image.nbTimePoints = Nb of timepoints
-Web.Entities.Image.pixelSizeX = Pixel size X
-Web.Entities.Image.pixelSizeY = Pixel size Y
-Web.Entities.Image.pixelSizeZ = Pixel size Z
-Web.Entities.Image.pixelType = Pixel type
-
-Web.Entities.Dataset.name = Name
-Web.Entities.Dataset.id = Id
-Web.Entities.Dataset.description = Description
-Web.Entities.Dataset.owner = Owner
-Web.Entities.Dataset.group = Group
-Web.Entities.Dataset.nbImages = Num. images
-
-Web.Entities.Project.name = Name
-Web.Entities.Project.id = Id
-Web.Entities.Project.description = Description
-Web.Entities.Project.owner = Owner
-Web.Entities.Project.group = Group
-Web.Entities.Project.nbDatasets = Num. datasets
-
-Web.Entities.Well.name = Name
-Web.Entities.Well.id = Id
-Web.Entities.Well.owner = Owner
-Web.Entities.Well.group = Group
-Web.Entities.Well.column = Column
-Web.Entities.Well.row = Row
-
-Web.Entities.PlateAcquisition.name = Name
-Web.Entities.PlateAcquisition.id = Id
-Web.Entities.PlateAcquisition.owner = Owner
-Web.Entities.PlateAcquisition.group = Group
-Web.Entities.PlateAcquisition.acquisitionTime = Acquisition date
-
-Web.Entities.Plate.name = Name
-Web.Entities.Plate.id = Id
-Web.Entities.Plate.owner = Owner
-Web.Entities.Plate.group = Group
-Web.Entities.Plate.columns = Columns
-Web.Entities.Plate.rows = Rows
-
-Web.Entities.Screen.name = Name
-Web.Entities.Screen.id = Id
-Web.Entities.Screen.description = Description
-Web.Entities.Screen.owner = Owner
-Web.Entities.Screen.group = Group
-Web.Entities.Screen.nbPlates = Num. plates
-
-Web.Entities.RepositoryEntities.OrphanedFolder.orphanedImages = Orphaned Images
-
-Web.Entities.RepositoryEntities.Server.server = Server
-
-Web.Entities.Permissions.Group.allGroups = All groups
-
-Web.Entities.Permissions.Owner.allMembers = All members
-
 ConnectionsManager.Command.manageServerConnections = Manage server connections
 
 ConnectionsManager.Connection.omeroServer = OMERO server
@@ -307,8 +235,9 @@ ConnectionsManager.ConnectionManager.webClients = Web clients
 
 ConnectionsManager.Image.unreachableImage = Unreachable image (access not permitted)
 
-Login.LoginForm.connecting = Connecting...
-Login.LoginForm.connectionFailed = Connection to {0} failed.\n\nCheck the following:\n- Valid credentials.\n- Access permission.\n- Correct URL.
+Login.LoginForm.connectingTo = Connecting to {0}...
+Login.LoginForm.connectionFailed = Connection failed
+Login.LoginForm.connectionFailedCheck = Connection to {0} failed.\n\nCheck the following:\n- Valid credentials.\n- Access permission.\n- Correct URL.
 Login.LoginForm.createConnection = Create a connection with an OMERO server
 Login.LoginForm.webServerUrl = OMERO web server URL
 Login.LoginForm.logInPublicUser = Log in as a public user
@@ -317,3 +246,79 @@ Login.LoginForm.password = Password
 Login.LoginForm.connect = Connect
 
 Login.WaitingWindow.cancel = Cancel
+
+UiUtilities.noImages = No images
+UiUtilities.noValidImagesInSelected = No valid images found in the selected items!
+UiUtilities.openImages = Open images
+UiUtilities.createProjectFirst = If you want to handle multiple images, you need to create a project first.
+
+Entities.Annotation.Comment.title = Comments
+Entities.Annotation.File.title = Attachments
+Entities.Annotation.Map.title = Key-Value pairs
+Entities.Annotation.Rating.title = Ratings
+Entities.Annotation.Tag.title = Tags
+
+Entities.Image.name = Name
+Entities.Image.id = Id
+Entities.Image.owner = Owner
+Entities.Image.group = Group
+Entities.Image.acquisitionDate = Acquisition date
+Entities.Image.imageWidth = Image width
+Entities.Image.imageHeight = Image height
+Entities.Image.uncompressedSize = Uncompressed size
+Entities.Image.nbChannels = Nb of channels
+Entities.Image.nbZSlices = Nb of z-slices
+Entities.Image.nbTimePoints = Nb of timepoints
+Entities.Image.pixelSizeX = Pixel size X
+Entities.Image.pixelSizeY = Pixel size Y
+Entities.Image.pixelSizeZ = Pixel size Z
+Entities.Image.pixelType = Pixel type
+
+Entities.Dataset.name = Name
+Entities.Dataset.id = Id
+Entities.Dataset.description = Description
+Entities.Dataset.owner = Owner
+Entities.Dataset.group = Group
+Entities.Dataset.nbImages = Num. images
+
+Entities.Project.name = Name
+Entities.Project.id = Id
+Entities.Project.description = Description
+Entities.Project.owner = Owner
+Entities.Project.group = Group
+Entities.Project.nbDatasets = Num. datasets
+
+Entities.Well.name = Name
+Entities.Well.id = Id
+Entities.Well.owner = Owner
+Entities.Well.group = Group
+Entities.Well.column = Column
+Entities.Well.row = Row
+
+Entities.PlateAcquisition.name = Name
+Entities.PlateAcquisition.id = Id
+Entities.PlateAcquisition.owner = Owner
+Entities.PlateAcquisition.group = Group
+Entities.PlateAcquisition.acquisitionTime = Acquisition date
+
+Entities.Plate.name = Name
+Entities.Plate.id = Id
+Entities.Plate.owner = Owner
+Entities.Plate.group = Group
+Entities.Plate.columns = Columns
+Entities.Plate.rows = Rows
+
+Entities.Screen.name = Name
+Entities.Screen.id = Id
+Entities.Screen.description = Description
+Entities.Screen.owner = Owner
+Entities.Screen.group = Group
+Entities.Screen.nbPlates = Num. plates
+
+Entities.RepositoryEntities.OrphanedFolder.orphanedImages = Orphaned Images
+
+Entities.RepositoryEntities.Server.server = Server
+
+Entities.Permissions.Group.allGroups = All groups
+
+Entities.Permissions.Owner.allMembers = All members
