Automatically import KVP and dataset info when importing image to project

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -1,7 +1,9 @@
 Extension.name = OMERO extension
 Extension.description = Adds the ability to browse OMERO servers and open images hosted on OMERO servers.
-Extension.importFromOMERO = Import from OMERO
 Extension.sendToOMERO = Send to OMERO
+Extension.importFromOMERO = Import from OMERO
+Extension.automaticallyImport = Automatically import key-value pairs and parent dataset information
+Extension.automaticallyImportWhenAddingImage = Automatically import key-value pairs and parent dataset information when adding an OMERO image to a QuPath project
 
 DataTransporters.Forms.ImageSettings.selectUpdate = Select what to update:
 DataTransporters.Forms.ImageSettings.imageName = Image name
