--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -219,6 +219,7 @@ ConnectionsManager.Connection.closeImages = You need to close images from this s
 ConnectionsManager.Connection.removeClientConfirmation = This server will be removed from the list of active servers.
 ConnectionsManager.Connection.disconnectClient = Disconnect from server
 ConnectionsManager.Connection.disconnectClientConfirmation = The connection to the server will be closed.
+ConnectionsManager.Connection.disconnectingFrom = Disconnecting from {0}...
 ConnectionsManager.Connection.image = image
 ConnectionsManager.Connection.images = images
 ConnectionsManager.Connection.browse = Browse
