Add namespace option when importing KVP

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -15,6 +15,11 @@ DataTransporters.Forms.ImportAnnotations.importAnnotationsFrom = Import annotati
 DataTransporters.Forms.ImportAnnotations.deleteCurrentAnnotations = Delete current QuPath annotations
 DataTransporters.Forms.ImportAnnotations.deleteCurrentDetections = Delete current QuPath detections
 
+DataTransporters.Forms.ImportKeyValuePairs.selectNamespaces = Select namespaces to import:
+DataTransporters.Forms.ImportKeyValuePairs.keepExisting = Keep existing key-value pairs
+DataTransporters.Forms.ImportKeyValuePairs.replaceExisting = Replace existing key-value pairs
+DataTransporters.Forms.ImportKeyValuePairs.deleteAll = Delete all existing key-value pairs
+
 DataTransporters.Forms.KeyValues.selectUpdateOptions = Select update options:
 DataTransporters.Forms.KeyValues.keepExisting = Keep existing values
 DataTransporters.Forms.KeyValues.replaceExisting = Replace existing values
@@ -58,9 +63,9 @@ DataTransporters.ImageSettingsImporter.channelDisplayRangesUpdated = Channel dis
 DataTransporters.ImageSettingsImporter.channelDisplayRangesNotUpdated = Channel display ranges not updated. The number of channels returned by the OMERO server doesn't match the number of channels of the image.
 
 DataTransporters.KeyValuesImporter.importKeyValues = Import key-value pairs
-DataTransporters.KeyValuesImporter.importingKeyValues = Importing key-value pairs...
 DataTransporters.KeyValuesImporter.projectNotOpened = A project must be opened in QuPath.
 DataTransporters.KeyValuesImporter.notFromOMERO = The current image is not from OMERO!
+DataTransporters.KeyValuesImporter.gettingKeyValuePairs = Getting key-value pairs information...
 DataTransporters.KeyValuesImporter.couldNotRetrieveKeyValues = Could not retrieve key-value pairs from OMERO.
 DataTransporters.KeyValuesImporter.noKeyValuePairFound = No key-value pair found in the OMERO server
 DataTransporters.KeyValuesImporter.keyValuesImported = Key-value pairs imported to the QuPath image.
