UI for sending KVP with namespace

--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -20,11 +20,6 @@ DataTransporters.Forms.ImportKeyValuePairs.keepExisting = Keep existing key-valu
 DataTransporters.Forms.ImportKeyValuePairs.replaceExisting = Replace existing key-value pairs
 DataTransporters.Forms.ImportKeyValuePairs.deleteAll = Delete all existing key-value pairs
 
-DataTransporters.Forms.KeyValues.selectUpdateOptions = Select update options:
-DataTransporters.Forms.KeyValues.keepExisting = Keep existing values
-DataTransporters.Forms.KeyValues.replaceExisting = Replace existing values
-DataTransporters.Forms.KeyValues.deleteAll = Delete all existing values
-
 DataTransporters.Forms.SendAnnotations.deleteExistingAnnotations = Delete existing OMERO annotations from
 DataTransporters.Forms.SendAnnotations.send = Send:
 DataTransporters.Forms.SendAnnotations.onlySelectedAnnotations = Only selected annotations
@@ -32,6 +27,15 @@ DataTransporters.Forms.SendAnnotations.allAnnotations = All annotations
 DataTransporters.Forms.SendAnnotations.deleteExistingMeasurements = Delete existing OMERO measurements
 DataTransporters.Forms.SendAnnotations.annotationMeasurements = Annotation measurements
 DataTransporters.Forms.SendAnnotations.detectionMeasurements = Detection measurements
+
+DataTransporters.Forms.SendKeyValuePairs.available = Available
+DataTransporters.Forms.SendKeyValuePairs.selected = Selected
+DataTransporters.Forms.SendKeyValuePairs.new = New:
+DataTransporters.Forms.SendKeyValuePairs.selectKeyValuePairs = Select key-value pairs to send:
+DataTransporters.Forms.SendKeyValuePairs.namespace = Namespace:
+DataTransporters.Forms.SendKeyValuePairs.newNamespace = New namespace
+DataTransporters.Forms.SendKeyValuePairs.keepExisting = Keep existing key-value pairs
+DataTransporters.Forms.SendKeyValuePairs.replaceExisting = Replace existing key-value pairs
 
 DataTransporters.AnnotationsImporter.importAnnotations = Import annotations
 DataTransporters.AnnotationsImporter.notFromOMERO = The current image is not from OMERO!
@@ -106,6 +110,7 @@ DataTransporters.KeyValuesSender.sendingKeyValues = Sending key-value pairs...
 DataTransporters.KeyValuesSender.projectNotOpened = A project must be opened in QuPath.
 DataTransporters.KeyValuesSender.notFromOMERO = The current image is not from OMERO!
 DataTransporters.KeyValuesSender.noValues = The current image does not contain any key-value pairs.
+DataTransporters.KeyValuesSender.gettingExistingNamespaces = Getting existing namespaces...
 DataTransporters.KeyValuesSender.keyValuesSent = Key-value pairs sent to the server.
 DataTransporters.KeyValuesSender.keyValuesNotSent = Key-value pairs not sent to the server.\nDo you have sufficient rights to write values to the OMERO image?
 
