--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -71,7 +71,7 @@ DataTransporters.KeyValuesImporter.projectNotOpened = A project must be opened i
 DataTransporters.KeyValuesImporter.notFromOMERO = The current image is not from OMERO!
 DataTransporters.KeyValuesImporter.gettingKeyValuePairs = Getting key-value pairs information...
 DataTransporters.KeyValuesImporter.couldNotRetrieveKeyValues = Could not retrieve key-value pairs from OMERO.
-DataTransporters.KeyValuesImporter.noKeyValuePairFound = No key-value pair found in the OMERO server
+DataTransporters.KeyValuesImporter.noKeyValuePairFound = No key-value pair found in the OMERO server.
 DataTransporters.KeyValuesImporter.keyValuesImported = Key-value pairs imported to the QuPath image.
 DataTransporters.KeyValuesImporter.nokeyValuesAdded = No key-value pair was added to the current QuPath image.
 DataTransporters.KeyValuesImporter.followingKeyValuesAdded = The following key-value pairs were added to the current QuPath image:\n{0}.
