--- a/src/main/resources/qupath/ext/omero/strings.properties
+++ b/src/main/resources/qupath/ext/omero/strings.properties
@@ -19,6 +19,7 @@ DataTransporters.Forms.ImportKeyValuePairs.selectNamespaces = Select namespaces 
 DataTransporters.Forms.ImportKeyValuePairs.keepExisting = Keep existing key-value pairs
 DataTransporters.Forms.ImportKeyValuePairs.replaceExisting = Replace existing key-value pairs
 DataTransporters.Forms.ImportKeyValuePairs.deleteAll = Delete all existing key-value pairs
+DataTransporters.Forms.ImportKeyValuePairs.default = Default
 
 DataTransporters.Forms.SendAnnotations.deleteExistingAnnotations = Delete existing OMERO annotations from
 DataTransporters.Forms.SendAnnotations.send = Send:
